# projeto_pdf_extractor

./: pyproject.toml
app/: extract.py  load.py  main.py  temp.csv  transform.py
