[tool.poetry]
name = "projeto-pdf-extractor"
version = "1"
description = "Extrator de dados de catálogos da Natura em PDF"
authors = ["Aline Silveira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf2 = "^3.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
